@@ -63,6 +63,7 @@
             <td>
                 <div data-im="salessummary@qty"></div>
                 <div data-im="salessummary@total"></div>
+                <!--<div data-im="salessummary@addone"></div>-->
             </td>
         </tr>
         </tbody>
